# DetectOps

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
app/: __init__.py  celery_app.py  config.py  database.py  main.py
app/annotations/: models.py  routes.py  schemas.py
app/auth/: models.py  routes.py  schemas.py  security.py
app/core/: celery_app.py  database.py  main.py  redis.py
app/datasets/: events.py  models.py  routes.py
app/images/: cache.py  events.py  models.py  routes.py  schemas.py
app/models/: __init__.py
app/projects/: models.py  routes.py  schemas.py
app/tasks/: blob_tasks.py  dataset_tasks.py  image_tasks.py  routes.py
app/utils/: blob_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/components/: Annotator.tsx  AppLayout.tsx  ImageGallery.tsx  ImageUpload.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/utils/: jwt.ts
migrations/: env.py
migrations/versions/: 357f056f9aa3_changed_images_table_to_have_a_is_.py  75af0d50a139_added_datasets.py  79864c92fe12_modified_datasets_table.py  89562077555a_add_dataset_versions_table.py  935a220cc69d_added_annotations_table.py  a667f98ceb33_add_image_model.py  b324b1638599_added_project_table_and_updated_.py  cc416b45607b_added_blob_path_to_datasets_table.py  d4b69b847baa_create_users_table.py  e10daa73c33c_changed_images_table_to_have_a_is_.py
tests/: conftest.py  test_annotations.py  test_auth.py  test_datasets.py  test_images.py  test_tasks.py
(+13 files in other folders)
